# ***** BEGIN GPL LICENSE BLOCK *****
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software Foundation,
# Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
#
# The Original Code is Copyright (C) 2019 Kévin Dietrich.
# All rights reserved.
#
# ***** END GPL LICENSE BLOCK *****

add_subdirectory(audio)
add_subdirectory(base64)
add_subdirectory(bcrypt)
add_subdirectory(chisei)
add_subdirectory(chrono)
add_subdirectory(compiler)
add_subdirectory(compression)
add_subdirectory(connexion_mysql)
add_subdirectory(ego)
add_subdirectory(exercises)
add_subdirectory(finance)
add_subdirectory(fluid_retimer)
add_subdirectory(flux)
add_subdirectory(graphe)
add_subdirectory(image)
add_subdirectory(langage)
add_subdirectory(lingua)
add_subdirectory(math)
add_subdirectory(memoire)
add_subdirectory(moultfilage)
add_subdirectory(nombre_decimaux)
add_subdirectory(objets)
add_subdirectory(opencv)
add_subdirectory(opengl)
add_subdirectory(outils)
add_subdirectory(patrons_conception)
add_subdirectory(phys)
add_subdirectory(python)
add_subdirectory(reference)
#add_subdirectory(réseau)
add_subdirectory(runtime_polymorphy)
add_subdirectory(sha256)
add_subdirectory(structures)
add_subdirectory(systeme_fichier)
add_subdirectory(table_hachage)
add_subdirectory(tests)
add_subdirectory(texture)
add_subdirectory(trees)
add_subdirectory(types)
add_subdirectory(unicode)
add_subdirectory(vision)
add_subdirectory(xml)
